<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/all_default_layout_offset">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:text="@string/dialog_title_ajuste_poupanca"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/off_white" />

    <TextView
        android:id="@+id/label_dialog_ajuste_poupanca_valor_maximo_retirada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:text="Valor máximo para retirada: R$ 65,00"
        android:textAlignment="textEnd"
        android:textColor="@color/colorHighlightPoupanca"
        android:textSize="@dimen/text_size_10" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:hint="@string/all_input_hint_valor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_ajuste_valor_poupanca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_ajuste_poupanca_movimento"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_movimento_ajuste_poupanca_guardar" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_movimento_ajuste_poupanca_retirar" />
    </com.google.android.material.tabs.TabLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dialog_ajuste_poupanca_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:text="@string/dialog_button_ajuste_poupanca_confirmar" />

</LinearLayout>