<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/all_default_layout_offset"
    tools:context=".ui.pendencia.DetalhesPendenciaDialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/all_default_layout_offset">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detalhes_economia_valor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detalhes_economia_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border_rounded_grey"
                android:padding="@dimen/all_default_layout_offset"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/all_default_layout_offset">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detalhes_economia_poupanca"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detalhes_economia_valor_poupanca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border_rounded_grey"
                android:padding="@dimen/all_default_layout_offset"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/off_white" />

    <TextView
        android:id="@+id/tv_detalhes_economia_aviso_valor_atingido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_string_detalhes_poupanca_valor_ultrapassado"
        android:textAlignment="textEnd"
        android:textColor="@color/colorHighlightPoupanca"
        android:textSize="@dimen/text_size_10" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_detalhes_economia_descricao"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_detalhes_economia_descricao"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:background="@drawable/background_border_rounded_grey"
            android:padding="@dimen/all_default_layout_offset"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_detalhes_economia_data"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_detalhes_economia_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ajustar_poupanca"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_detalhes_economia_ajustar_poupança" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_detalhes_economia_conquistado"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_detalhes_economia_conquistado" />

    </LinearLayout>
</LinearLayout>

