<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_dialog_detalhes_pendencia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/dialog_title_detalhes_pendencia" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/all_default_layout_offset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detalhes_pendencia_valor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_pendencia_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detalhes_pendencia_data" />

            <TextView
                android:id="@+id/tv_item_carteira_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detalhes_pendencia_descricao" />

            <TextView
                android:id="@+id/tv_item_pendencia_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border_rounded_grey"
                android:lines="3"
                android:padding="@dimen/all_default_layout_offset"
                android:textStyle="italic" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white" />

        <Button
            android:id="@+id/button_detalhes_item_carteira_marcar_como_pago"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalhes_pendencia_marcar_como_pago" />
    </LinearLayout>
</LinearLayout>