<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/all_default_layout_offset">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_default_layout_offset"
            android:layout_marginBottom="@dimen/all_default_layout_offset"
            android:text="@string/all_string_adicionar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textinput_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/all_default_layout_offset"
            android:text="@string/all_string_dialog_adicionar_campos_vazios"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_input_hint_descricao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_descricao"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_default_layout_offset"
            android:hint="@string/all_input_hint_valor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/dialog_add_element_button_adicionar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_button_default_height"
        android:background="@drawable/dialog_action_button_background"
        android:text="@string/all_string_adicionar"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
