<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetalhesPendenciaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_item_carteira_detalhes_action_buttons"
        android:orientation="vertical"
        android:padding="@dimen/all_default_layout_offset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valor:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_pendencia_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="R$ 460,00"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iniciada em:" />

            <TextView
                android:id="@+id/tv_item_carteira_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24/07/2019"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="Descrição:" />

            <TextView
                android:id="@+id/tv_item_pendencia_descricao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:maxLines="2"
                android:text="Parcelas do carro"
                android:textAlignment="textEnd"
                android:textStyle="italic" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_default_layout_offset"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhes_pendencias_title_notas"
                android:textSize="16sp"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/off_white" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_add_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_default_layout_offset"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/all_default_layout_offset"
                    android:weightSum="10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_event_note" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textinput_add_nota"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textCapSentences" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imagebutton_nota_cancelar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_cancel" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ListView
                android:id="@+id/listview_detalhes_pendencia_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />

            <TextView
                android:id="@+id/label_detalhes_pendecia_sem_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/all_default_layout_offset"
                android:text="@string/detalhes_pendecias_nao_ha_notas"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_detalhes_pendencia_add_nota"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/detalhes_pendencia_button_add_nota"
                app:icon="@drawable/ic_add" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_item_carteira_detalhes_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/all_default_layout_offset"
        android:orientation="vertical"
        android:padding="@dimen/all_default_layout_offset">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/off_white" />

        <Button
            android:id="@+id/button_detalhes_item_carteira_marcar_como_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalhes_pendencia_marcar_como_pago" />
    </LinearLayout>

</RelativeLayout>